# LedgerLine

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml
docs/: architecture.md  audio-packs.md  development-status.md  integrated-implementation-plan.md  native-host-adapters.md  pack-security.md  release-verification-0.6.0.md
examples/nocturne/: NOTES.md  automation.yaml  brief.yaml  mix.yaml  piece.yaml
handbook/: AGENT_GUIDE.md  ENVIRONMENT_SETUP.md
packs/: README.md  candidates.json  catalog.json  catalog.json.sig
schemas/: assets.schema.json  automation.schema.json  brief.schema.json  edits.schema.json  mix.schema.json  motifs.schema.json  part.schema.json  performance.schema.json  piece.schema.json  render.schema.json  review.schema.json  studio-command.schema.json  studio-state.schema.json
scripts/: build_starter_pack.py  external-engine-smoke.ps1  external_engine_smoke.py  generate_release_key.py  run_studio_e2e.py  sign_catalog.py  verify_packaged_runtime.py  verify_plugin_asset.py
studio-ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
tests/: conftest.py  test_analysis.py  test_assets.py  test_audio.py  test_automation.py  test_build_state.py  test_comparison.py  test_compile.py  test_delegation_listening.py  test_delegation_preview.py  test_environment.py  test_expression.py  test_expression_backends.py  test_external_engine_smoke.py  test_external_process_cancellation.py  test_instrument_profile.py  test_jobs.py  test_large_project.py  test_legacy_render_cache.py  test_micro_expression.py  test_mix_config.py  test_model.py  test_motifs.py  test_multistaff.py  test_notation_expression.py  test_plugin.py  test_plugin_host.py  test_plugin_studio_lifecycle.py  test_project.py  test_project_init.py  test_reference_host.py  test_refinement.py  test_release_fixtures.py  test_render_graph.py  test_review.py  test_sample_import.py  test_setup.py  test_soundfont.py  test_studio.py  test_studio_edits_extended.py  (+6 more)
(+145 files in other folders)
